--- a/styles.css
+++ b/styles.css
@@ -18,4 +18,41 @@
     color: #333333;
     font-size: 14px;
     font-weight: 400;
+    cursor: pointer;
+}
+
+/* SUB HEADER */
+.sub-header {
+    max-height: 340px;
+}
+.sub-header .object {
+    max-height: 340px;
+}
+
+main {
+    background-color: #EBEBEB;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 12px;
+    height: max-content;
+
+}
+
+#payment-methods-section {
+    background-color: #FFFFFF;
+    border-radius: 4px;
+}
+
+#payment-methods-section div.payment-icon {
+    padding-right: 8px;
+}
+
+#payment-methods-section div.m-title {
+    font-size: 17px;
+}
+
+#payment-methods-section div.view-more-text {
+    font-size: 13px;
+    color: #3483FA;
+    cursor: pointer;
 }
